# sync-ldap-subtrees

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  changelog  cliff-debian.toml  cliff.toml  deny.toml  push-deploy-branches.sh  release.sh
.github/workflows/: github-release.yaml
rpm/centos7/: sync-ldap-subtrees.spec
