[package]
name = "sync-ldap-subtrees"
description = "Syncs two LDAP subtrees on two different LDAP servers similar to rsync for files"
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/sync-ldap-subtrees"
keywords = [ "ldap", "sync" ]
categories = [ "command-line-utilities" ]
exclude = [ "push-deploy-branches.sh", ".env", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.ldap-types]
version = "0.1.0"

[dependencies.ldap-utils]
version = "0.1.0"

[dependencies.ldap3]
version = "0.9"
features = [ "tls" ]

[dependencies.lazy_static]
version = "1.4.0"

[dependencies.simple-error]
version = "~0.2"

[dependencies.serde]
version = "1.0.114"
features = [ "derive" ]

[dependencies.chumsky]
version = "0.7.0"

[dependencies.diff-struct]
version = "0.4.0"

[dependencies.clap]
version = "~3.1"
features = ["derive", "cargo"]

[dependencies.tokio]
version = "~1"
features = [ "full" ]

[dependencies.futures]
version = "~0.3"

[dependencies.tracing]
version = "~0.1"

[dependencies.tracing-subscriber]
version = "~0.3"
features = [ "env-filter", "tracing-log" ]

[dependencies.oid]
version = "0.2.1"

[dependencies.enum-as-inner]
version = "0.3.3"

[dev-dependencies.pretty_assertions]
version = "~1.0"

[package.metadata.deb]
name = "sync-ldap-subtrees"
depends = "$auto"
extended-description = "Syncs two LDAP subtrees on two different LDAP servers similar to rsync for files"
section = "database"
copyright = "2022, Matthias Hörmann <mhoermann@gmail.com>"
assets = [
  [ "target/release/sync_ldap_subtrees", "usr/bin/", "755" ],
  ]
maintainer-scripts = "maintainer-scripts"
changelog = "changelog"
revision = "1"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sync_ldap_subtrees = { path = "/usr/bin/sync_ldap_subtrees" }
